Vérification du projet sur l'IDE de rendu